versions/v1.7_permanent/v1.7_permanent.log

  You can now view your Streamlit app in your browser.

  URL: http://localhost:8501

2025-07-29 22:03:40.994 Script compilation error
Traceback (most recent call last):
  File "/opt/miniconda3/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 549, in _run_script
    code = self._script_cache.get_bytecode(script_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/miniconda3/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/miniconda3/lib/python3.12/site-packages/streamlit/runtime/scriptrunner/magic.py", line 46, in add_magic
    tree = ast.parse(code, script_path, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/miniconda3/lib/python3.12/ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/mac/QLIB/versions/v1.7_permanent/V001_v1.2_完整V001_13模块_智能缓存增强系统_fixed.py", line 108
    else:
IndentationError: unexpected indent
2025-07-29 22:03:41.026 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
  Stopping...
